--- a/html_email2_responsive/index.html
+++ b/html_email2_responsive/index.html
@@ -6,10 +6,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>HTML Email</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-	<style type="text/css">
-	/* css code here */
-	</style>
+	<!-- External CSS -->
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 	
