added preview text to responsive email

--- a/html_email2_responsive/index.html
+++ b/html_email2_responsive/index.html
@@ -12,6 +12,12 @@
 
 	
 <body bgcolor="#efe1b0">
+
+	<!-- This is for Inbox Preview -->
+	<div id="inbox-text-preview">
+		This a bunch of dummy text you should see in your mailbox preview text.
+	</div>
+
 	<!-- outer table -->
 	<table width="100%" cellspacing="0" cellpadding="0" bgcolor="#efe1b0">
 		<tr>
@@ -125,7 +131,7 @@
 
 								<img src="images/giants_logo.jpg" alt="random logo" width="75" height="75"><br>
 								Bacon ipsum dolor amet landjaeger flank pig, tail hamburger picanha pancetta pork loin venison ham hock cupim porchetta tri-tip.	
-								<br><br>
+								<br><br class="spacer">
 								<a href="#" style="color: #efe1b0; text-decoration: none">Learn More</a>
 								</td>
 							</tr>
@@ -138,7 +144,7 @@
 
 								<img src="images/giants_logo.jpg" alt="random logo" width="75" height="75"><br>
 								Bacon ipsum dolor amet landjaeger flank pig, tail hamburger picanha pancetta pork loin venison ham hock cupim porchetta tri-tip.	
-								<br><br>
+								<br><br class="spacer">
 								<a href="#" style="color: #efe1b0; text-decoration: none">Learn More</a>
 								</td>
 							</tr>
@@ -151,7 +157,7 @@
 
 								<img src="images/giants_logo.jpg" alt="random logo" width="75" height="75"><br>
 								Bacon ipsum dolor amet landjaeger flank pig, tail hamburger picanha pancetta pork loin venison ham hock cupim porchetta tri-tip.	
-								<br><br>
+								<br><br class="spacer">
 								<a href="#" style="color: #efe1b0; text-decoration: none">Learn More</a>
 								</td>
 							</tr>
